[gd_scene load_steps=3 format=3 uid="uid://lbq5c8nv4jns"]

[ext_resource type="Script" path="res://scenes/game/fake_light.gd" id="1_02lpk"]

[sub_resource type="SphereShape3D" id="SphereShape3D_njj41"]
radius = 0.001

[node name="FakeLight" type="Node3D" node_paths=PackedStringArray("col")]
script = ExtResource("1_02lpk")
col = NodePath("Area3D/CollisionShape3D")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_njj41")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
